services/heimdall/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heimdall
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-url: https://auth.kristinn.pro/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://auth.kristinn.pro/oauth2/start?rd=https://$host$request_uri
spec:
  ingressClassName: nginx
  rules:
    - host: kristinn.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heimdall
                port:
                  number: 80
